--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "dependencies": {
+    "@tailwindcss/postcss": "^4.1.7",
+    "next": "^15.3.2"
   }
 }
